Fixed a wrong namespace, and added started creating the first iteratino of the 2024.1 solver.

--- a/Aoc.Ui/Aoc.Ui.csproj
+++ b/Aoc.Ui/Aoc.Ui.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="2025Solvers\**" />
+    <EmbeddedResource Remove="2025Solvers\**" />
+    <None Remove="2025Solvers\**" />
+    <Page Remove="2025Solvers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
   </ItemGroup>
